--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -1,8 +1,9 @@
 docker_builder:
   name: test
   env:
-    GOPATH: /usr/local/go
-    PATH: $PATH:$GOPATH/bin
+    HOME: /root
+    GOROOT: /usr/local/go
+    PATH: $PATH:$GOROOT/bin
   install_script: 
     - wget --no-verbose -O - https://golang.org/dl/go1.17.linux-amd64.tar.gz | tar -C /usr/local -xz
     - go install github.com/bazelbuild/bazelisk@latest
