--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -7,5 +7,6 @@ docker_builder:
   install_script: 
     - wget --no-verbose -O - https://golang.org/dl/go1.17.linux-amd64.tar.gz | tar -C /usr/local -xz
     - go install github.com/bazelbuild/bazelisk@latest
+  env_script: go env
   build_script: bazel build //...
   test_script: bazel test //...
