--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -2,12 +2,9 @@ docker_builder:
   name: test
   env:
     HOME: /root
-    GOBIN: /root/go/bin
-    GOROOT: /usr/local/go
-    PATH: $PATH:$GOBIN:$GOROOT/bin:$GOROOT/bin
   install_script: 
-    - wget --no-verbose -O - https://golang.org/dl/go1.17.linux-amd64.tar.gz | tar -C /usr/local -xz
-    - go install github.com/bazelbuild/bazelisk@latest
-  env_script: go env
+    - curl https://github.com/bazelbuild/bazelisk/releases/latest/download/bazelisk-linux-amd64 -o bazel
+    - chmod +x bazel
+    - sudo mv bazel /usr/bin/
   build_script: bazel build //...
   test_script: bazel test //...
